tests/invalid/trait/assoc_projection_enum_type_arg_mismatch.facet
trait Provider {
  type Item;
}

impl Provider for unrestricted isize {
  type Item = unrestricted bool;
}

enum Slot<T> {
  Full(unrestricted T)
}

fn main() -> unrestricted Slot<unrestricted <unrestricted isize as Provider>::Item> {
  Slot<unrestricted <unrestricted isize as Provider>::Item>::Full(1)
}
